Increase 20 character limit when creating filenames. b=134890 r=brade@netscape.com sr=kin@netscape.com